# esp32c3-embassy

./: .clippy.toml  .drone.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE-2.0.txt  LICENSE-MIT.txt  README.md  flake.nix  justfile  rust-toolchain.toml
.cargo/: config.toml
esp32c3-embassy/: Cargo.toml
esp32c3-embassy/src/: adafruitio.rs  cell.rs  clock.rs  dashboard.rs  display.rs  domain.rs  http.rs  logging.rs  main.rs  random.rs  sensor.rs  sleep.rs  wifi.rs  worldtimeapi.rs
sketch/: links.txt  sketch.fzz
waveshare-154bv2-rs/: Cargo.toml
waveshare-154bv2-rs/src/: async.rs  blocking.rs  buffer.rs  color.rs  command.rs  error.rs  lib.rs
